KsheerabdhiOrgSetup/force-app/main/default/objects/Discount_request__c/Discount_request__c.object-meta.xml
<CustomObject>
    <label>Discount request</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>request record number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>