KsheerabdhiOrgSetup/force-app/main/default/objects/Discount_request__c/fields/amount_purchased__c.field-meta.xml
<CustomField>
    <fullName>amount_purchased__c</fullName>
    <label>amount purchased</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>