KsheerabdhiOrgSetup/force-app/main/default/objects/Discount_request__c/fields/Assumed_Amount_after_discount__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Amount_after_discount__c</fullName>
    <formula>amount_purchased__c  - ( amount_purchased__c  *   Discount_applicable__c )</formula>
    <label>Assumed Amount after discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>