KsheerabdhiOrgSetup/force-app/main/default/objects/Discount_request__c/fields/Discount_applicable__c.field-meta.xml
<CustomField>
    <fullName>Discount_applicable__c</fullName>
    <formula>IF(  amount_purchased__c  &lt;= 30000, 5 / 100, IF(  amount_purchased__c  &lt;= 60000, 10/100, IF(  amount_purchased__c  &gt; 60000, 15/100,15/100) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount applicable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>