KsheerabdhiOrgSetup/force-app/main/default/objects/Discount_request__c/fields/Discount_applied_For__c.field-meta.xml
<CustomField>
    <fullName>Discount_applied_For__c</fullName>
    <label>Discount applied For:</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>