KsheerabdhiOrgSetup/force-app/main/default/objects/Discount_request__c/fields/Item_bought__c.field-meta.xml
<CustomField>
    <fullName>Item_bought__c</fullName>
    <label>Item bought</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PVC plumbing pipes</fullName>
            </value>
            <value>
                <fullName>CPVC plumbing pipes</fullName>
            </value>
            <value>
                <fullName>PVC electrical pipes</fullName>
            </value>
            <value>
                <fullName>CPVC electrical pipes</fullName>
            </value>
            <value>
                <fullName>Current wire&apos;s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>