KsheerabdhiOrgSetup/force-app/main/default/objects/Discount_request__c/fields/Mobile_number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_number__c</fullName>
    <label>Mobile number</label>
    <type>Phone</type>
</CustomField>