KsheerabdhiOrgSetup/force-app/main/default/objects/Discount_request__c/fields/Name_of_the_customer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_customer__c</fullName>
    <label>Name of the customer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>