KsheerabdhiOrgSetup/force-app/main/default/objects/Discount_request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>amount_purchased__c</columns>
    <columns>Discount_applicable__c</columns>
    <columns>Discount_applied_For__c</columns>
    <columns>status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>